chandeliers-lus/tests/compile_fail/ui/tc/not-found.stderr
error: Variable X not found in the context.
 --> tests/compile_fail/ui/tc/not-found.rs:6:13
  |
6 |         i = X;
  |             ^
  |
  = note: Perhaps you meant one of the local variables: i
  = note: or one of the global variables: Y, Z
